# dexbox

./: .env.example  .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  Dockerfile  Dockerfile.sandbox-python  GEMINI.md  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md  docker-compose.yml  go.mod  go.sum  install.sh  pyproject.toml
.agents/rules/: README.md
.cursor/rules/: mcp-platform-tools.mdc
.github/workflows/: ci.yml  release.yml
.windsurf/rules/: workflow-core.md  workflow-creation-process.md  workflow-error-handling.md  workflow-guide-comprehensive.md  workflow-python-sdk.md  workflow-reference-detailed.md  workflow-secure-params.md
agent/: .env.example  package-lock.json
agent/python-langchain/: README.md  agent.py  client.py  pyproject.toml
agent/python-langchain/tools/: __init__.py  extend.py
agent/shared/: extend-parse.ts  extend_parse.py
agent/src/: index.ts
agent/typescript-vercel-ai/: package-lock.json  package.json  tsconfig.json
cmd/dexbox/: integration_test.go  main.go  main_test.go  rdp_add_test.go  server.go  setup.go
cmd/dexbox-agent/: main.go
docker/: supervisord.conf
docker/services/: services.ini
docs/: nen-692-test-progress.md  verifying-admin-access.md
examples/: download-files.py  extract-data.py  fill-form.py  test-assets.py
homebrew/: dexbox.rb
internal/agent/: agent.go  agent_test.go
langchain-agent/: agent.py  client.py  pyproject.toml
tests/: test_agent.py  test_computer.py  test_harness.py  test_routes.py  test_sandbox.py  test_secure.py  test_secure_value.py  test_session.py
(+101 files in other folders)
