[project]
name = "dexbox-langchain-agent"
version = "0.1.0"
description = "LangChain agent harness for dexbox computer-use"
requires-python = ">=3.13"

dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.4.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "Pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "pytest>=9.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
